// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can add row in preflight 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "Adding row from preflight (key=joe-id).",
  "wingsdk.cloud.Table created.",
  "get row joe-id from table my_addrow_table.",
  "wingsdk.cloud.Table deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`can add row in preflight 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_table",
        "props": {
          "columns": {
            "age": 1,
            "name": 0,
          },
          "initialRows": {
            "joe-id": {
              "age": 50,
              "name": "Joe Doe",
            },
          },
          "name": "my_addrow_table",
          "primaryKey": "id",
        },
        "type": "wingsdk.cloud.Table",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_table": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud NoSQL database table that can be used to store and query data",
            "title": "Table",
          },
          "id": "my_table",
          "path": "root/my_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`create a table 1`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_table",
        "props": {
          "columns": {
            "age": 1,
            "name": 0,
          },
          "initialRows": {},
          "name": "new_table",
          "primaryKey": "id",
        },
        "type": "wingsdk.cloud.Table",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_table": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A cloud NoSQL database table that can be used to store and query data",
            "title": "Table",
          },
          "id": "my_table",
          "path": "root/my_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`get row 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Table created.",
  "get row joe-id from table my_get_table.",
  "insert row joe-id into the table my_get_table.",
  "get row joe-id from table my_get_table.",
  "wingsdk.cloud.Table deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`get row 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_table",
        "props": {
          "columns": {
            "age": 1,
            "name": 0,
          },
          "initialRows": {},
          "name": "my_get_table",
          "primaryKey": "id",
        },
        "type": "wingsdk.cloud.Table",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_table": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A cloud NoSQL database table that can be used to store and query data",
            "title": "Table",
          },
          "id": "my_table",
          "path": "root/my_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`insert row 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Table created.",
  "get row joe-id from table my_insert_table.",
  "insert row joe-id into the table my_insert_table.",
  "wingsdk.cloud.Table deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`insert row 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_table",
        "props": {
          "columns": {
            "age": 1,
            "name": 0,
          },
          "initialRows": {},
          "name": "my_insert_table",
          "primaryKey": "id",
        },
        "type": "wingsdk.cloud.Table",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_table": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A cloud NoSQL database table that can be used to store and query data",
            "title": "Table",
          },
          "id": "my_table",
          "path": "root/my_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`list table 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Table created.",
  "get row joe-id from table my_list_table.",
  "insert row joe-id into the table my_list_table.",
  "get row jane-id from table my_list_table.",
  "insert row jane-id into the table my_list_table.",
  "list all rows from table my_list_table.",
  "wingsdk.cloud.Table deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`list table 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_table",
        "props": {
          "columns": {
            "age": 1,
            "name": 0,
          },
          "initialRows": {},
          "name": "my_list_table",
          "primaryKey": "id",
        },
        "type": "wingsdk.cloud.Table",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_table": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A cloud NoSQL database table that can be used to store and query data",
            "title": "Table",
          },
          "id": "my_table",
          "path": "root/my_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`update row 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Table created.",
  "get row joe-id from table my_update_table.",
  "insert row joe-id into the table my_update_table.",
  "get row joe-id from table my_update_table.",
  "get row joe-id from table my_update_table.",
  "update row joe-id in table my_update_table.",
  "get row joe-id from table my_update_table.",
  "wingsdk.cloud.Table deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`update row 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_table",
        "props": {
          "columns": {
            "age": 1,
            "name": 0,
          },
          "initialRows": {},
          "name": "my_update_table",
          "primaryKey": "id",
        },
        "type": "wingsdk.cloud.Table",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_table": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A cloud NoSQL database table that can be used to store and query data",
            "title": "Table",
          },
          "id": "my_table",
          "path": "root/my_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
